# manual-sphinx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  test_install.py
docs/adr/: 001-package-architecture.md  002-theme-styling-approach.md  003-testing-strategy.md
examples/basic/: README.md
examples/basic/source/: advanced.md  conf.py  features.md  index.md  introduction.md
sphinx_marginbook_theme/: __init__.py  directives.py  myst_integration.py  nodes.py  version.py
sphinx_marginbook_theme/html/theme/marginbook/: layout.html  theme.conf
sphinx_marginbook_theme/html/theme/marginbook/static/: marginbook.css  marginbook.js
sphinx_marginbook_theme/latex/: __init__.py  config.py
tests/: conftest.py  test_directives.py  test_nodes.py  test_theme.py
tests/roots/test-basic/: conf.py  index.md
